# foxhttp

./: .DockerIgnore  .clang-format  .gitattributes  .gitignore  .mailmap  CHANGELOG.md  CMakeLists.txt  CONTRIBUTING.md  Dockerfile  README.md  README_zh.md  foxhttp_plan.md
.github/workflows/: cd-docker.yml  ci.yml  docker.yml
benchmark/: CMakeLists.txt  README.md  coroutine_throughput_benchmark.cpp  form_plaintext_benchmark.cpp  json_parse_benchmark.cpp  middleware_chain_benchmark.cpp  router_benchmark.cpp
cmake/: FoxHttpConfig.cmake.in  foxhttp.pc.in
docs/: ADVANCED_STRAND_POOL.md  ENHANCED_MIDDLEWARE.md  MIDDLEWARE_DESIGN_REFACTOR.md  MIDDLEWARE_IMPROVEMENTS_SUMMARY.md  SESSION_MIDDLEWARE_INTEGRATION.md  SPDLOG_MIDDLEWARE_GUIDE.md  TIMER_MANAGER_REFACTOR.md
document/: README.rst  architecture.rst  build_install.rst  client.rst  conf.py  config.rst  coroutines.rst  index.rst  intro.rst  middleware.rst  packaging.rst  parsers.rst  request_context.rst  routing.rst  server_io.rst  testing.rst
doxygen/: Doxygen.in
examples/: 01_hello_server.cpp  02_routing.cpp  03_middleware_chain.cpp  04_static_files.cpp  05_json_body.cpp  06_http_client.cpp  07_graceful_shutdown.cpp  08_error_handling.cpp  09_client_timeout.cpp  10_instance_router.cpp  CMakeLists.txt  README.md  advanced_strand_pool_example.cpp  enhanced_middleware_example.cpp  enhanced_parsers_example.cpp  header_method_test.cpp  lambda_route_registration_example.cpp  multipart_example.cpp  recommended_middleware_usage_example.cpp  session_middleware_integration_example.cpp  simple_enhanced_middleware_example.cpp  simple_multipart_example.cpp  spdlog_middleware_example.cpp  timer_manager_example.cpp
examples/detail/: first_cors_middleware.hpp  router_dispatch_middleware.hpp
examples/www/: index.html
fox/: CMakeLists.txt  main.cpp
fox/api/: version.cpp  version.h
include/: CMakeLists.txt
include/foxhttp/: client.hpp  config.hpp  error_codes.hpp  foxhttp.hpp
include/foxhttp/cfg/: config.hpp
include/foxhttp/client/: client.hpp  client_options.hpp  connection_pool.hpp  http_client.hpp  types.hpp
include/foxhttp/client/detail/: request_spec.hpp
include/foxhttp/config/: config_manager.hpp  configs.hpp  tls.hpp
include/foxhttp/config/detail/: config_watcher.hpp
include/foxhttp/config/details/: config_watcher.hpp
include/foxhttp/core/: constants.hpp  error_codes.hpp  io_context_pool.hpp  request_context.hpp  server.hpp  session.hpp  signal_set.hpp  strand_pool.hpp  timer_manager.hpp
include/foxhttp/detail/: await_middleware_async.hpp  timer_guard.hpp
include/foxhttp/handler/: api_handler.hpp  callable_api_handler.hpp
include/foxhttp/middleware/: middleware.hpp  middleware_chain.hpp  middleware_factories.hpp
include/foxhttp/middleware/advanced/: auth_middleware.hpp  compression_middleware.hpp  rate_limit_middleware.hpp  security_headers_middleware.hpp
include/foxhttp/middleware/basic/: body_parser_middleware.hpp  cors_middleware.hpp  functional_middleware.hpp  logger_middleware.hpp  response_time_middleware.hpp  static_middleware.hpp
include/foxhttp/parser/: form_parser.hpp  json_parser.hpp  multipart_parser.hpp  parser.hpp  plaintext_parser.hpp
include/foxhttp/parser/detail/: form_parser_impl.hpp  json_parser_impl.hpp  multipart_parser_impl.hpp  plain_text_parser_impl.hpp
include/foxhttp/parser/details/: form_parser_core.hpp  json_parser_core.hpp  multipart_parser_core.hpp  plain_text_parser_core.hpp
include/foxhttp/router/: route.hpp  route_table.hpp  router.hpp
include/foxhttp/server/: io_context_pool.hpp  request_context.hpp  server.hpp  session.hpp  session_base.hpp  signal_set.hpp  ssl_server.hpp  ssl_session.hpp  strand_pool.hpp  timer_manager.hpp  ws_session.hpp  wss_session.hpp
scripts/: apply_naming_refactor.py  full_refactor.py
src/: CMakeLists.txt
src/client/: client.cpp  connection_pool.cpp  http_client.cpp  types.cpp
src/config/: config_manager.cpp
src/config/detail/: config_watcher.cpp
src/config/details/: config_watcher.cpp
src/core/: io_context_pool.cpp  request_context.cpp  server.cpp  session.cpp  signal_set.cpp  strand_pool.cpp  timer_manager.cpp
src/middleware/: middleware.cpp  middleware_chain.cpp
src/middleware/advanced/: compression_middleware.cpp
src/middleware/basic/: body_parser_middleware.cpp  cors_middleware.cpp  functional_middleware.cpp  logger_middleware.cpp  static_middleware.cpp
src/parser/: form_parser.cpp  json_parser.cpp  multipart_parser.cpp  plaintext_parser.cpp
src/router/: route.cpp  route_table.cpp  router.cpp
src/server/: io_context_pool.cpp  request_context.cpp  server.cpp  session.cpp  session_base.cpp  signal_set.cpp  ssl_server.cpp  ssl_session.cpp  strand_pool.cpp  timer_manager.cpp  ws_session.cpp  wss_session.cpp
tests/: CMakeLists.txt  await_middleware_async_test.cpp  body_parser_middleware_test.cpp  client_timeout_test.cpp  coroutine_exception_test.cpp  cors_middleware_test.cpp  http_client_test.cpp  json_parser_test.cpp  middleware_builder_test.cpp  middleware_chain_test.cpp  middleware_timeout_test.cpp  request_context_test.cpp  response_time_middleware_test.cpp  router_test.cpp  server_graceful_shutdown_test.cpp  ssl_handshake_timeout_test.cpp  static_middleware_test.cpp
