file(GLOB_RECURSE EXAMPLES ${CMAKE_CURRENT_SOURCE_DIR}/*.cpp)
foreach(EXAMPLE ${EXAMPLES})
    get_filename_component(EXAMPLE_NAME ${EXAMPLE} NAME_WE)
    add_executable(${EXAMPLE_NAME} ${EXAMPLE})
    target_link_libraries(${EXAMPLE_NAME} foxhttplib)
    set_target_properties(${EXAMPLE_NAME} PROPERTIES FOLDER "examples")
endforeach(EXAMPLE ${EXAMPLES})